fix-stuck

--- a/style.css
+++ b/style.css
@@ -1,20 +1,10 @@
-body{
-    font-family: 'Overpass', sans-serif; 
-}
-.nav, .text {
-    font-family: 'Overpass', sans-serif;
-
-}
-
-html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,
-samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,
-td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video {
+* {
     font-family: 'Overpass', sans-serif;
 }
-
 
 .navbar-font{
-    font-size: 1.4em;
+    font-size: 1.5vw;
+    margin-top: 20px;
 }
 
 .nav-link {
